# jitter

./: .env.example  .gitignore  README.md  config.yaml.original  pyproject.toml  run_jitter.sh
jitter/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
jitter/agents/: architect.py  coder.py  dedup.py  documenter.py  evaluator.py  planner.py  scout.py
jitter/services/: anthropic_client.py  github_service.py  tavily_client.py  test_runner.py
jitter/store/: history.py
jitter/utils/: logging.py  retry.py
tests/: conftest.py  test_coder.py  test_config.py  test_dedup.py  test_evaluator.py  test_history.py  test_models.py  test_pipeline.py  test_scout.py
